fix scrollbar issue

--- a/styles/components.css
+++ b/styles/components.css
@@ -183,17 +183,16 @@
 }
 
 *::-webkit-scrollbar-track {
-  background: linear-gradient(
-      287.43deg,
-      #764dff 33.27%,
-      #239eb9 61.72%,
-      #d73e87 82.93%
-    ),
-    url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  background: linear-gradient(to top, #391637, #25235d), rgba(0, 0, 0, 0.6);
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #ecf2f5;
-  border: 2px solid #b84f90;
+  background: linear-gradient(
+    287.43deg,
+    #d375fb,
+    #764dff 33.27%,
+    #239eb9 61.72%,
+    #d73e87 82.93%
+  );
   border-radius: 3px;
 }
